add websocket + react client websocket
