# server/docs/swagger.yaml
@@ -11,51 +11,37 @@ definitions:
       libPath:
         type: string
     type: object
-  types.RequestLogin:
-    properties:
-      id:
-        type: string
-      password:
-        type: string
-    type: object
-  types.RequestRegister:
-    properties:
-      id:
-        type: string
-      password:
-        type: string
-    type: object
-  types.ResponseGetAllGames:
+  types.GetAllGamesResponse:
     properties:
       games:
         additionalProperties:
           $ref: '#/definitions/types.GameDefinition'
         type: object
     type: object
-  types.ResponseGetAllRooms:
-    properties:
-      rooms:
-        additionalProperties:
-          $ref: '#/definitions/types.Room'
-        type: object
-    type: object
-  types.ResponseGetAllUsers:
+  types.GetAllUsersResponse:
     properties:
       users:
         additionalProperties:
           $ref: '#/definitions/types.User'
         type: object
     type: object
-  types.ResponseGetGameByID:
+  types.GetGameByIDResponse:
     properties:
       game:
         $ref: '#/definitions/types.GameDefinition'
         type: object
     type: object
-  types.ResponseGetRoomByID:
+  types.RegisterRequest:
     properties:
-      room:
-        $ref: '#/definitions/types.Room'
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  types.RegisterResponse:
+    properties:
+      user:
+        $ref: '#/definitions/types.User'
         type: object
     type: object
   types.ResponseGetUserByID:
@@ -64,34 +50,9 @@ definitions:
         $ref: '#/definitions/types.User'
         type: object
     type: object
-  types.ResponseLogin:
-    properties:
-      token:
-        type: string
-      user:
-        $ref: '#/definitions/types.User'
-        type: object
-    type: object
-  types.ResponseRegister:
-    properties:
-      user:
-        $ref: '#/definitions/types.User'
-        type: object
-    type: object
-  types.Room:
-    properties:
-      id:
-        type: string
-      users:
-        items:
-          $ref: '#/definitions/types.User'
-        type: array
-    type: object
   types.User:
     properties:
-      id:
-        type: string
-      password:
+      username:
         type: string
     type: object
 info:
@@ -106,7 +67,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.ResponseGetAllGames'
+            $ref: '#/definitions/types.GetAllGamesResponse'
         "400":
           description: Bad Request
           schema:
@@ -127,37 +88,13 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.ResponseGetGameByID'
+            $ref: '#/definitions/types.GetGameByIDResponse'
         "400":
           description: Bad Request
           schema:
             $ref: '#/definitions/types.ErrorResponse'
       tags:
       - Games
-  /api/login:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: .
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/types.RequestLogin'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/types.ResponseLogin'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/types.ErrorResponse'
-      tags:
-      - Auth
   /api/register:
     post:
       consumes:
@@ -168,56 +105,20 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/types.RequestRegister'
+          $ref: '#/definitions/types.RegisterRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.ResponseRegister'
+            $ref: '#/definitions/types.RegisterResponse'
         "400":
           description: Bad Request
           schema:
             $ref: '#/definitions/types.ErrorResponse'
       tags:
       - Auth
-  /api/rooms:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/types.ResponseGetAllRooms'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/types.ErrorResponse'
-      tags:
-      - Rooms
-  /api/rooms/{id}:
-    get:
-      parameters:
-      - description: ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/types.ResponseGetRoomByID'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/types.ErrorResponse'
-      tags:
-      - Rooms
   /api/users:
     get:
       produces:
@@ -226,7 +127,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.ResponseGetAllUsers'
+            $ref: '#/definitions/types.GetAllUsersResponse'
         "400":
           description: Bad Request
           schema:
