# server/types/user.go
@@ -1,6 +1,15 @@
 package types
 
+import (
+	"github.com/googollee/go-socket.io"
+)
+
 type User struct {
-	ID       string `json:"id"`
-	Password string `json:"password"`
+	Username string `json:"username"`
+}
+
+type Client struct {
+	Socket socketio.Conn
+	Token  string
+	User   *User
 }
